# surveillance_robot2

./: CMakeLists.txt  README.md  conf.py  package.xml  setup.py
action/: ArmControl.action
config/: motors_config.yaml  sim.rviz
docs/: Doxyfile.in  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html
docs/_build/xml/: _c_make_lists_8txt.xml  _r_e_a_d_m_e_8md.xml  action__client__helper_8py.xml  architecture__name__mapper_8py.xml  arm__controller_8py.xml  class_aruco_marker_detector.xml  classaction__client__helper_1_1_action_client_helper.xml  classarm__controller_1_1_arm_controller_action.xml  classrobot__state_1_1_robot_state.xml  classsmach__helper_1_1_smach_helper.xml  classsmach__robot_1_1_build_map.xml  classsmach__robot_1_1_charge.xml  classsmach__robot_1_1_check_location.xml  classsmach__robot_1_1_move.xml  classsmach__robot_1_1_reasoner.xml  conf_8py.xml  dir_4fb52e138fea9e0f6b09ed5af7e4c9f9.xml  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_df38b2a5d584e0f6066b4518b95c638b.xml  index.xml  index_8rst_8txt.xml  marker__detector_8cpp.xml  marker__server_8cpp.xml  md__r_e_a_d_m_e.xml  namespaceaction__client__helper.xml  (+11 more)
docs/_modules/: index.html
docs/_sources/: index.rst.txt
launch/: armor.launch  assignment.launch  gazebo_rviz.launch  gmapping_movebase.launch  prova.launch
msg/: Room.msg
ontologies/: topological_map.owl
param/: base_local_planner_params.yaml
scripts/: arm_controller.py  robot_state.py  smach_robot.py
src/: marker_detector.cpp  marker_server.cpp
urdf/: materials.xacro  robot_alpha.gazebo  robot_alpha.xacro
utilities/surveillance_robot2/: action_client_helper.py  architecture_name_mapper.py  smach_helper.py
(+9 files in other folders)
